# python_and_kafka_lp

./: .gitignore  README.md  db-queries.py  docker-compose-app.yml  docker-compose.yml  hello_world.py  pyproject.toml
kafka-persistence/data/: meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
kafka-persistence/data/__cluster_metadata-0/: leader-epoch-checkpoint  quorum-state
kafka-persistence/data/__consumer_offsets-29/: partition.metadata
kafka-persistence/data/__consumer_offsets-31/: leader-epoch-checkpoint
kafka-persistence/data/greetings-0/: partition.metadata
kafka-persistence/data/hello-0/: leader-epoch-checkpoint  partition.metadata
kafka-persistence/data/hello-world-__assignor-__leader-0/: partition.metadata
kafka-persistence/data/myapp-__assignor-__leader-0/: partition.metadata
kafka-persistence/data/myapp-myapp.order-0/: partition.metadata
kafka-persistence/data/orders-0/: partition.metadata
kafka-persistence/data/test-0/: leader-epoch-checkpoint  partition.metadata
sample-project/: main.py  pyproject.toml
